# hmagic

./: .gitignore  AboutDlg.c  AsmPatchFrame.c  AudioFrame.c  AudioLogic.c  AudioLogic.h  BlockDlg.c  BossLocationsDlg.c  CMakeLists.txt  Callbacks.h  ChooseObject.c  CustomStyles.h  DocumentFrame.c  DungeonDlg.c  DungeonEnum.h  DungeonFrame.c  DungeonLogic.c  DungeonLogic.h  DungeonMap.c  DungonHeader.c  DuplicateRoomDlg.c  EditExitDlg.c  EditWhirlpoolDlg.c  ErrorsDlg.c  GdiObjects.c  GdiObjects.h  GraphicSchemesDlg.c  GraphicsLogic.c  GraphicsLogic.h  HMagic.sln  HMagic.vcxproj  HMagic.vcxproj.filters  HMagicConfigDlg.c  HMagicEnum.h  HMagicFrame.c  HMagicLogic.c  HMagicLogic.h  HMagicUtility.c  HMagicUtility.h  LevelMapBlocks.c  (+81 more)
text_resources/: area_names.txt  entrance_names.txt
